# megamicros

./: .gitignore  CHANGELOG  FRAME_ACCUMULATION.md  LICENSE  P1.npy  P2.npy  RANDOM_ASYNC_QUEUE.md  README.md  REFACTORING_v4.md  USER_GUIDE_v4.md  mbs-server.json  mbs-server.template.json  megamicros  meta.yaml  mkdocs.yml  mkrelease.sh  pyproject.toml  requirements.txt  setup.py  test-ws.py  test_frame_accumulation.py  test_random_queue.py  test_ux_improvements.py  test_v4_architecture.py
.github/: copilot-instructions.md
docs/: USER_GUIDE_V3-1.md  index.md
docs/api/: index.md
docs/dev/: getting_started.md  index.md  writing_doc.md
docs/tutorials/: index.md
examples/: db_audio.py  h5_plot.py  mu_graph.py  ws_graph.py  ws_listen.py  ws_master.py  ws_slave.py
notebooks/: 01_getstarted.ipynb  01_getstarted_MemsArray.ipynb  02_getstarted_usb.ipynb  03_getstarted_Megamicros.ipynb  04_getstarted_BMF.ipynb  04_getstarted_triggering.ipynb  05_getstarted_BMF_square_antenna.ipynb  06_getstarted_Muh5.ipynb  Antenna-square-JetsonNano-0001.npy  Mu32_Mems32_JetsonNano_0001.json  calibrate.py  getstarted_Aidb.ipynb  getstarted_AilabDataset.ipynb  getstarted_BMF.ipynb  getstarted_Beamformer.ipynb  getstarted_H5.ipynb  getstarted_Megamicros.ipynb  getstarted_MemsARrayH5.ipynb  getstarted_MemsArray.ipynb  getstarted_MemsArray.py  getstarted_MemsArray2.ipynb  getstarted_MemsArrayCB.ipynb  getstarted_MemsArrayDB.ipynb  getstarted_MemsArrayNP.ipynb  getstarted_MemsArrayWS.ipynb  getstarted_MemsArrayWS.py  getstarted_PyQT.ipynb  getstarted_usb.ipynb  locations.json  megamicros  mems_position_square_relative.json  mu5h-20231107-074757.h5  mu5h-20231107-075400.h5  mu5h-20231107-075544.h5  mu5h-20231107-075810.h5  mu5h-20231107-075851.h5  mu5h-20231107-081400.h5  mu5h-20231107-081715.h5  mu5h-20231107-081956.h5  mu5h-20231107-082957.h5  (+9 more)
notebooks/assets/: FRFMemsHOSMAAvg.json
src/megamicros/: __init__.py  antenna.py  bmf.old.py  bmf.py  data.py  exception.py  geometry.py  (+8 more)
tests/: 00_test.ipynb  Principale.h  Test_04.py  Test_05.py  test.py  test_mu.ipynb  test_mu.py  test_usb.py
trash/: dataset.py  getstarted_MemsArrayDB.ipynb
(+140 files in other folders)
