[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "megamicros"
dynamic = ["version"]
description = "Megamicros MEMS microphone array library for acoustic beamforming"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bruno Gas", email = "bruno.gas@bimea.io"}
]
maintainers = [
    {name = "Bruno Gas", email = "bruno.gas@bimea.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]
keywords = ["MEMS", "microphone", "antenna", "beamforming", "acoustics", "signal processing", "array"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "libusb1>=2.0",
    "h5py>=3.0",
    "imageio>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.0.260",
    "mypy>=0.990",
]
websocket = [
    "websockets>=10.0",
]
simulation = [
    "pyroomacoustics>=0.6",
]

[project.urls]
Homepage = "https://github.com/bimea/megamicros"
Documentation = "https://readthedoc.bimea.io"
Source = "https://github.com/bimea/megamicros/"

[project.scripts]
megamicros = "megamicros.apps.main:main"
megamicros-version = "megamicros.apps.version:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["contrib", "docs", "tests*", "tasks"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
